--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Welcome to ZagroOS - A custom OS built from scratch.">
+    <meta name="google-site-verification" content="hiF8NsrNYWBHD3XUb0Zhw8kp7l7yQ3_GI9sCBALCqSc" />
     <title>ZagroOS - The Future of Operating Systems</title>
     <style>
         body {
@@ -117,4 +118,3 @@
 
 </body>
 </html>
-google-site-verification: google6467120d1be28099.html
