--- a/index.html
+++ b/index.html
@@ -2,9 +2,10 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Welcome to ZagroOS - A custom OS built from scratch.">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">    
+    <meta name="description" content="Zagros OS is a custom-built operating system for performance and security.">
     <meta name="google-site-verification" content="hiF8NsrNYWBHD3XUb0Zhw8kp7l7yQ3_GI9sCBALCqSc" />
+    
     <title>ZagroOS - The Future of Operating Systems</title>
     <style>
         body {
