--- a/index.html
+++ b/index.html
@@ -1,121 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">    
-    <meta name="description" content="Zagros OS is a custom-built operating system for performance and security.">
-    <meta name="google-site-verification" content="hiF8NsrNYWBHD3XUb0Zhw8kp7l7yQ3_GI9sCBALCqSc" />
-    
-    <title>ZagroOS - The Future of Operating Systems</title>
-    <style>
-        body {
-            font-family: Arial, sans-serif;
-            background-color: #f4f4f4;
-            color: #333;
-            margin: 0;
-            padding: 0;
-            line-height: 1.6;
-        }
-        header {
-            background-color: #2C3E50;
-            color: white;
-            padding: 20px;
-            text-align: center;
-        }
-        h1 {
-            margin: 0;
-            font-size: 36px;
-        }
-        nav {
-            text-align: center;
-            background-color: #34495E;
-            padding: 10px;
-        }
-        nav a {
-            color: white;
-            margin: 0 15px;
-            text-decoration: none;
-            font-size: 18px;
-        }
-        nav a:hover {
-            text-decoration: underline;
-        }
-        .content {
-            padding: 20px;
-        }
-        .video-container {
-            text-align: center;
-            margin: 20px 0;
-        }
-        footer {
-            background-color: #2C3E50;
-            color: white;
-            text-align: center;
-            padding: 10px;
-            position: fixed;
-            width: 100%;
-            bottom: 0;
-        }
-        .download-button {
-            background-color: #27AE60;
-            color: white;
-            padding: 15px 25px;
-            font-size: 18px;
-            text-decoration: none;
-            border-radius: 5px;
-            margin-top: 20px;
-            display: inline-block;
-        }
-        .download-button:hover {
-            background-color: #2ECC71;
-        }
-    </style>
-</head>
-<body>
-
-<header>
-    <h1>Welcome to ZagroOS</h1>
-    <p>Building the Future of Operating Systems</p>
-</header>
-
-<nav>
-    <a href="#about">About</a>
-    <a href="#features">Features</a>
-    <a href="#download">Download</a>
-    <a href="#contact">Contact</a>
-</nav>
-
-<div class="content">
-    <section id="about">
-        <h2>About ZagroOS</h2>
-        <p>ZagroOS is a custom-built operating system developed from the ground up. It focuses on performance, security, and efficiency, providing a seamless experience for users and developers alike.</p>
-    </section>
-
-    <section id="features">
-        <h2>Key Features</h2>
-        <ul>
-            <li>Lightweight and fast</li>
-            <li>Open-source and customizable</li>
-            <li>Built with C and Assembly for maximum performance</li>
-            <li>Perfect for developers and speedrunners</li>
-        </ul>
-    </section>
-
-    <section class="video-container">
-        <h2>Watch the Introduction Video</h2>
-        <iframe width="560" height="315" src="https://www.youtube.com/embed/YOUR_VIDEO_ID" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-    </section>
-
-    <section id="download">
-        <h2>Download ZagroOS</h2>
-        <p>Get the latest version of ZagroOS and experience the future of operating systems.</p>
-        <a href="https://drive.google.com/uc?export=download&id=YOUR_FILE_ID" class="download-button" target="_blank">Download ZagroOS</a>
-    </section>
-</div>
-
-<footer>
-    <p>&copy; 2025 ZagroOS. All Rights Reserved.</p>
-</footer>
-
-</body>
+    <haed>
+        <titel>zagros os assembly
+    </haed>
+    <body>
+        <h5>assembly is good</h5>
+        <h2>and is best</h2>
+    </body>
 </html>
