--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
         <titel>zagros os assembly
     </haed>
     <body>
-        <h5>assembly is good</h5>
-        <h2>and is best</h2>
-        <br>
+        <h1>zagros os is good</h1>
+        <hr>
+        <h4>what is zzagros os zagroos is best os but is in working  </h4>
     </body>
 </html>
