--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
     <haed>
-        <titel>zagros os assembly
+        <titel>zagros os assembly</titel>
     </haed>
     <body>
         <h1>zagros os is good</h1>
