--- a/index.html
+++ b/index.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
-    <haed>
-        <titel>zagros os assembly</titel>
-    </haed>
+    <head>
+        <title>Zagros OS Assembly</title>
+    </head>
     <body>
-        <h1>zagros os is good</h1>
+        <h1>Zagros OS is good</h1>
         <hr>
-        <h4>what is zzagros os zagroos is best os but is in working  </h4>
+        <h4>What is Zagros OS? Zagros is the best OS, but it is still in development.</h4>
     </body>
 </html>
