--- a/index.html
+++ b/index.html
@@ -7,5 +7,7 @@
         <h1>Zagros OS is good</h1>
         <hr>
         <h4>What is Zagros OS? Zagros is the best OS, but it is still in development.</h4>
+        
+        <a href="https://youtube.com/" target="_blank" title="YouTube">Click me for more details</a>
     </body>
 </html>
