--- a/index.html
+++ b/index.html
@@ -9,6 +9,6 @@
         <h4>What is Zagros OS? Zagros is the best OS, but it is still in development.</h4>
         
         <a href="https://youtube.com/" target="_blank" title="YouTube">Click me for more details</a>
-        <a href="/peags/about.html" target="_blank" title="About">click is for About</a>
+        <a href="pages/about.html">About Us</a>
     </body>
 </html>
