--- a/pages/download.html
+++ b/pages/download.html
@@ -11,11 +11,14 @@
         <h1>Download Zagros OS</h1>
         <p>Experience the power of Zagros OS! Click below to download the latest version.</p>
 
-        <a href="assets/zagros-os.zip" class="download-btn" download>Download Now</a>
-
         <p>Need help? Visit our <a href="help.html">Help Page</a>.</p>
 
         <a href="index.html" class="back-link">← Back to Home</a>
+    </div>
+
+    <!-- Sticky Footer -->
+    <div class="footer">
+        <a href="assets/zagros-os.zip" class="download-btn" download>Download Now</a>
     </div>
 </body>
 </html>
