--- a/pages/download.html
+++ b/pages/download.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Download Zagros OS</title>
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="pages/styles.css">  <!-- Link to CSS -->
 </head>
 <body>
     <div class="container">
