--- a/index.html
+++ b/index.html
@@ -1,14 +1,23 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-        <title>Zagros OS Assembly</title>
-    </head>
-    <body>
-        <h1>Zagros OS is good</h1>
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Zagros OS Assembly</title>
+    <link rel="stylesheet" href="styles.css"> <!-- Link to CSS -->
+</head>
+<body>
+    <div class="container">
+        <h1>Zagros OS is Good</h1>
         <hr>
-        <h4>What is Zagros OS? Zagros is the best OS, but it is still in development.</h4>
-        
-        <a href="https://youtube.com/" target="_blank" title="YouTube">Click me for more details</a>
-        <a href="pages/about.html">About Us</a>
-    </body>
+        <h4>What is Zagros OS?</h4>
+        <p>Zagros is the best OS, but it is still in development.</p>
+
+        <div class="links">
+            <a href="https://youtube.com/" target="_blank" title="YouTube" class="btn">More Details</a>
+            <a href="pages/about.html" class="btn">About Us</a>
+        </div>
+    </div>
+</body>
 </html>
+
