--- a/index.html
+++ b/index.html
@@ -7,17 +7,72 @@
     <link rel="stylesheet" href="styles.css"> <!-- Link to CSS -->
 </head>
 <body>
-    <div class="container">
-        <h1>Zagros OS is Good</h1>
-        <hr>
-        <h4>What is Zagros OS?</h4>
-        <p>Zagros is the best OS, but it is still in development.</p>
+    <header>
+        <h1>Welcome to Zagros OS</h1>
+        <p>The Future of Assembly-Based Operating Systems</p>
+    </header>
 
-        <div class="links">
-            <a href="https://youtube.com/" target="_blank" title="YouTube" class="btn">More Details</a>
-            <a href="pages/about.html" class="btn">About Us</a>
-        </div>
-    </div>
-</body>
-</html>
+    <nav>
+        <ul>
+            <li><a href="index.html">Home</a></li>
+            <li><a href="pages/about.html">About Us</a></li>
+            <li><a href="download.html">Download</a></li>
+            <li><a href="https://youtube.com/" target="_blank">YouTube</a></li>
+        </ul>
+    </nav>
 
+    <main>
+        <section class="intro">
+            <h2>What is Zagros OS?</h2>
+            <p>Zagros OS is a revolutionary operating system built from scratch in Assembly. It aims to be fast, lightweight, and optimized for high performance.</p>
+        </section>
+
+        <section class="features">
+            <h2>Key Features</h2>
+            <ul>
+                <li>🔹 Ultra-fast performance with low resource usage</li>
+                <li>🔹 Built entirely in Assembly</li>
+                <li>🔹 Custom kernel for optimized hardware interaction</li>
+                <li>🔹 Support for multiple file systems</li>
+                <li>🔹 Security-focused design</li>
+            </ul>
+        </section>
+
+        <section class="roadmap">
+            <h2>Development Roadmap</h2>
+            <p>We are actively working on developing new features and improving stability. Below are the planned updates:</p>
+            <table>
+                <tr>
+                    <th>Version</th>
+                    <th>Features</th>
+                    <th>Status</th>
+                </tr>
+                <tr>
+                    <td>v0.1</td>
+                    <td>Basic bootloader & CLI</td>
+                    <td>✅ Completed</td>
+                </tr>
+                <tr>
+                    <td>v0.2</td>
+                    <td>File system support</td>
+                    <td>🛠️ In Progress</td>
+                </tr>
+                <tr>
+                    <td>v0.3</td>
+                    <td>GUI implementation</td>
+                    <td>⏳ Planned</td>
+                </tr>
+            </table>
+        </section>
+
+        <section class="cta">
+            <h2>Join the Community</h2>
+            <p>Want to contribute to Zagros OS? Join our developer community and help shape the future of this project.</p>
+            <a href="https://github.com/" class="btn">Join on GitHub</a>
+        </section>
+    </main>
+
+    <footer>
+        <p>© 2025 Zagros OS | All Rights Reserved</p>
+    </footer>
+</body
