--- a/index.html
+++ b/index.html
@@ -4,75 +4,48 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Zagros OS Assembly</title>
-    <link rel="stylesheet" href="styles.css"> <!-- Link to CSS -->
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <header>
-        <h1>Welcome to Zagros OS</h1>
-        <p>The Future of Assembly-Based Operating Systems</p>
-    </header>
-
-    <nav>
-        <ul>
-            <li><a href="index.html">Home</a></li>
-            <li><a href="pages/about.html">About Us</a></li>
-            <li><a href="download.html">Download</a></li>
-            <li><a href="https://youtube.com/" target="_blank">YouTube</a></li>
-        </ul>
-    </nav>
-
-    <main>
-        <section class="intro">
-            <h2>What is Zagros OS?</h2>
-            <p>Zagros OS is a revolutionary operating system built from scratch in Assembly. It aims to be fast, lightweight, and optimized for high performance.</p>
-        </section>
-
-        <section class="features">
-            <h2>Key Features</h2>
-            <ul>
-                <li>🔹 Ultra-fast performance with low resource usage</li>
-                <li>🔹 Built entirely in Assembly</li>
-                <li>🔹 Custom kernel for optimized hardware interaction</li>
-                <li>🔹 Support for multiple file systems</li>
-                <li>🔹 Security-focused design</li>
-            </ul>
-        </section>
-
-        <section class="roadmap">
-            <h2>Development Roadmap</h2>
-            <p>We are actively working on developing new features and improving stability. Below are the planned updates:</p>
-            <table>
-                <tr>
-                    <th>Version</th>
-                    <th>Features</th>
-                    <th>Status</th>
-                </tr>
-                <tr>
-                    <td>v0.1</td>
-                    <td>Basic bootloader & CLI</td>
-                    <td>✅ Completed</td>
-                </tr>
-                <tr>
-                    <td>v0.2</td>
-                    <td>File system support</td>
-                    <td>🛠️ In Progress</td>
-                </tr>
-                <tr>
-                    <td>v0.3</td>
-                    <td>GUI implementation</td>
-                    <td>⏳ Planned</td>
-                </tr>
-            </table>
-        </section>
-
-        <section class="cta">
-            <h2>Join the Community</h2>
-            <p>Want to contribute to Zagros OS? Join our developer community and help shape the future of this project.</p>
-            <a href="https://github.com/" class="btn">Join on GitHub</a>
-        </section>
-    </main>
-
-    <footer>
-        <p>© 2025 Zagros OS | All Rights Reserved</p>
-    </footer>
-</body
+    <table class="main-table" align="center" width="800">
+        <tr>
+            <td colspan="2">
+                <h1 style="color: #FF0000; font-size: 48px;">Welcome to Zagros OS</h1>
+                <p><i>The Future of Assembly-Based Operating Systems</i></p>
+            </td>
+        </tr>
+        <tr>
+            <td width="200" valign="top" style="background-color: #F5F5F5;">
+                <ul>
+                    <li><a href="index.html" class="nav-link">Home</a></li>
+                    <li><a href="pages/about.html" class="nav-link">About Us</a></li>
+                    <li><a href="download.html" class="nav-link">Download</a></li>
+                    <li><a href="https://youtube.com/" target="_blank" class="nav-link">YouTube</a></li>
+                </ul>
+            </td>
+            <td width="600" valign="top">
+                <h2 style="font-size: 32px; color: #0066CC;">What is Zagros OS?</h2>
+                <p>Zagros OS is a revolutionary operating system built from scratch in Assembly. It aims to be fast, lightweight, and optimized for high performance.</p>
+                <br>
+                <h2 style="font-size: 32px; color: #0066CC;">Key Features</h2>
+                <ul>
+                    <li>Ultra-fast performance with low resource usage</li>
+                    <li>Built entirely in Assembly</li>
+                    <li>Custom kernel for optimized hardware interaction</li>
+                    <li>Support for multiple file systems</li>
+                    <li>Security-focused design</li>
+                </ul>
+                <br>
+                <h2 style="font-size: 32px; color: #0066CC;">Join the Community</h2>
+                <p>Want to contribute to Zagros OS? Join our developer community and help shape the future of this project.</p>
+                <a href="https://github.com/" class="btn">Join on GitHub</a>
+            </td>
+        </tr>
+        <tr>
+            <td colspan="2" style="background-color: #0066CC; color: white; text-align: center; padding: 10px;">
+                <p>&copy; 2025 Zagros OS | All Rights Reserved</p>
+            </td>
+        </tr>
+    </table>
+</body>
+</html>
