--- a/index.html
+++ b/index.html
@@ -7,42 +7,69 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <table class="main-table" align="center" width="800">
+    <table class="main-table" align="center" width="1000">
         <tr>
-            <td colspan="2">
-                <h1 style="color: #FF0000; font-size: 48px;">Welcome to Zagros OS</h1>
-                <p><i>The Future of Assembly-Based Operating Systems</i></p>
+            <td colspan="2" style="background-color: #FFCC00; text-align: center; padding: 20px;">
+                <h1 style="color: #FF0000; font-size: 56px; font-family: 'Courier New', monospace;">Welcome to Zagros OS</h1>
+                <p><i style="font-size: 20px; font-family: 'Arial', sans-serif;">The Future of Assembly-Based Operating Systems</i></p>
             </td>
         </tr>
         <tr>
-            <td width="200" valign="top" style="background-color: #F5F5F5;">
-                <ul>
+            <td width="250" valign="top" style="background-color: #F5F5F5; padding: 15px;">
+                <ul style="font-size: 20px; font-family: 'Arial', sans-serif;">
                     <li><a href="index.html" class="nav-link">Home</a></li>
                     <li><a href="pages/about.html" class="nav-link">About Us</a></li>
                     <li><a href="download.html" class="nav-link">Download</a></li>
                     <li><a href="https://youtube.com/" target="_blank" class="nav-link">YouTube</a></li>
                 </ul>
-            </td>
-            <td width="600" valign="top">
-                <h2 style="font-size: 32px; color: #0066CC;">What is Zagros OS?</h2>
-                <p>Zagros OS is a revolutionary operating system built from scratch in Assembly. It aims to be fast, lightweight, and optimized for high performance.</p>
                 <br>
-                <h2 style="font-size: 32px; color: #0066CC;">Key Features</h2>
-                <ul>
-                    <li>Ultra-fast performance with low resource usage</li>
-                    <li>Built entirely in Assembly</li>
-                    <li>Custom kernel for optimized hardware interaction</li>
-                    <li>Support for multiple file systems</li>
-                    <li>Security-focused design</li>
+                <p style="font-size: 18px; color: #0066CC;">Use the links above to navigate the site. Explore the world of Zagros OS!</p>
+            </td>
+            <td width="750" valign="top" style="padding: 30px;">
+                <h2 style="font-size: 40px; color: #0066CC;">What is Zagros OS?</h2>
+                <p style="font-size: 22px;">Zagros OS is a revolutionary operating system built entirely in Assembly. It aims to be fast, lightweight, and optimized for high performance.</p>
+                <br>
+                <h2 style="font-size: 40px; color: #0066CC;">Key Features</h2>
+                <ul style="font-size: 22px;">
+                    <li>🔹 Ultra-fast performance with low resource usage</li>
+                    <li>🔹 Built entirely in Assembly</li>
+                    <li>🔹 Custom kernel for optimized hardware interaction</li>
+                    <li>🔹 Support for multiple file systems</li>
+                    <li>🔹 Security-focused design</li>
                 </ul>
                 <br>
-                <h2 style="font-size: 32px; color: #0066CC;">Join the Community</h2>
-                <p>Want to contribute to Zagros OS? Join our developer community and help shape the future of this project.</p>
+                <h2 style="font-size: 40px; color: #0066CC;">Development Roadmap</h2>
+                <table border="1" cellspacing="0" cellpadding="5" width="100%" style="font-size: 20px; border-color: #0066CC;">
+                    <tr>
+                        <th style="background-color: #0066CC; color: white;">Version</th>
+                        <th style="background-color: #0066CC; color: white;">Features</th>
+                        <th style="background-color: #0066CC; color: white;">Status</th>
+                    </tr>
+                    <tr>
+                        <td>v0.1</td>
+                        <td>Basic bootloader & CLI</td>
+                        <td>✅ Completed</td>
+                    </tr>
+                    <tr>
+                        <td>v0.2</td>
+                        <td>File system support</td>
+                        <td>🛠️ In Progress</td>
+                    </tr>
+                    <tr>
+                        <td>v0.3</td>
+                        <td>GUI implementation</td>
+                        <td>⏳ Planned</td>
+                    </tr>
+                </table>
+                <br>
+                <h2 style="font-size: 40px; color: #0066CC;">Join the Community</h2>
+                <p style="font-size: 22px;">Want to contribute to Zagros OS? Join our developer community and help shape the future of this project. We welcome contributions from developers worldwide.</p>
+                <br>
                 <a href="https://github.com/" class="btn">Join on GitHub</a>
             </td>
         </tr>
         <tr>
-            <td colspan="2" style="background-color: #0066CC; color: white; text-align: center; padding: 10px;">
+            <td colspan="2" style="background-color: #0066CC; color: white; text-align: center; padding: 20px; font-size: 18px;">
                 <p>&copy; 2025 Zagros OS | All Rights Reserved</p>
             </td>
         </tr>
