--- a/index.html
+++ b/index.html
@@ -4,16 +4,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Zagros OS Assembly</title>
+    <link rel="stylesheet" href="btm.css"> <!-- Link to btm.css -->
 </head>
 
 <body>
-    <h1>Welcome tp zagros os </h1>
+    <h1>Welcome to Zagros OS</h1>
     <hr>
-    
+
+    <!-- Styled button link -->
+    <a href="pages/download.html" target="_blank" class="btn">Click Me</a>
 </body>
-
-
-
-
-
 </html>
