--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Zagros OS Assembly</title>
-    <link rel="stylesheet" href="btm.css"> <!-- Link to btm.css -->
+    <link rel="stylesheet" href="styles.css"> <!-- Link to btm.css -->
 </head>
 
 <body>
