--- a/index.html
+++ b/index.html
@@ -12,6 +12,6 @@
     <hr>
 
     <!-- Styled button link -->
-    <a href="pages/download.html" target="_blank" class="btn">Click Me</a>
+    <a href="#"><button>Link Text</button></a>
 </body>
 </html>
