--- a/index.html
+++ b/index.html
@@ -11,7 +11,9 @@
     <h1>Welcome to Zagros OS</h1>
     <hr>
 
+<button>ok</button>
+
     <!-- Styled button link -->
-    <a href="#"><button>Link Text</button></a>
+    <a href="#"><button>ok</button>kurd</a>
 </body>
 </html>
