--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <!-- Embedded CSS -->
     <style>
         /* Your provided CSS here */
-        a {
+        btm {
             color: rgba(255, 255, 255, 0.692);
             padding: 10px 15px;
             display: flex;
@@ -26,7 +26,7 @@
             border: 1px solid transparent;
         }
 
-        a:hover {
+        btm:hover {
             border-color: rgba(255, 255, 255, 0.623);
             background: linear-gradient(
                 to bottom,
@@ -38,7 +38,7 @@
             transform: translateY(-6px);
         }
 
-        a:active {
+        btm:active {
             transform: translateY(2px);
             box-shadow: none;
         }
@@ -54,4 +54,3 @@
     <a href="https://example.com" target="_blank">Click Me</a>
 </body>
 </html>
-mai
