--- a/index.html
+++ b/index.html
@@ -7,41 +7,42 @@
 
     <!-- Embedded CSS -->
     <style>
-        /* Your provided CSS here */
-        btm {
-            color: rgba(255, 255, 255, 0.692);
-            padding: 10px 15px;
-            display: flex;
-            justify-content: space-between;
-            align-items: center;
-            text-shadow: 0 0 20px rgba(255, 255, 255, 0.397);
-            background: rgba(255, 255, 255, 0.068);
-            overflow: hidden;
-            font-size: 0.9rem;
-            font-weight: 600;
-            gap: 8px;
-            border-radius: 5px;
-            margin: 0 5px;
-            transition: 0.2s;
-            border: 1px solid transparent;
-        }
+        /* From Uiverse.io by cybrejon */ 
+    a {
+      color: rgba(255, 255, 255, 0.692);
+     padding: 10px 15px;
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+      text-shadow: 0 0 20px rgba(255, 255, 255, 0.397);
+      background: rgba(255, 255, 255, 0.068);
+      overflow: hidden;
+      font-size: 0.9rem;
+      font-weight: 600;
+      gap: 8px;
+      border-radius: 5px;
+      margin: 0 5px;
+      transition: 0.2s;
+      border: 1px solid transparent;
+    }
 
-        btm:hover {
-            border-color: rgba(255, 255, 255, 0.623);
-            background: linear-gradient(
-                to bottom,
-                rgba(255, 255, 255, 0.144),
-                rgba(255, 255, 255, 0.247),
-                rgba(255, 255, 255, 0.39)
-            );
-            box-shadow: 0 6px rgba(255, 255, 255, 0.623);
-            transform: translateY(-6px);
-        }
+    a:hover {
+    border-color: rgba(255, 255, 255, 0.623);
+  background: linear-gradient(
+        to bottom,
+        rgba(255, 255, 255, 0.144),
+        rgba(255, 255, 255, 0.247),
+        rgba(255, 255, 255, 0.39)
+     );
+      box-shadow: 0 6px rgba(255, 255, 255, 0.623);
+      transform: translateY(-6px);
+    }
 
-        btm:active {
-            transform: translateY(2px);
-            box-shadow: none;
-        }
+    a:active {
+      transform: translateY(2px);
+     box-shadow: none;
+    }
+
     </style>
 
 </head>
