--- a/index.html
+++ b/index.html
@@ -7,42 +7,67 @@
 
     <!-- Embedded CSS -->
     <style>
-        /* From Uiverse.io by cybrejon */ 
-        a {
-            color: rgba(255, 255, 255, 0.692);
-            padding: 10px 15px;
-            display: flex;
-            justify-content: space-between;
-            align-items: center;
-            text-shadow: 0 0 20px rgba(255, 255, 255, 0.397);
-            background: rgba(255, 255, 255, 0.068);
-            overflow: hidden;
-            font-size: 0.9rem;
-            font-weight: 600;
-            gap: 8px;
-            border-radius: 5px;
-            margin: 0 5px;
-            transition: 0.2s;
-            border: 1px solid transparent;
+        body {
+            font-family: Arial, sans-serif;
+            background-color: #f4f4f4;
+            color: #333;
+            margin: 0;
+            padding: 0;
+            line-height: 1.6;
         }
-
-    a:hover {
-      border-color: rgba(255, 255, 255, 0.623);
-      background: linear-gradient(
-        to bottom,
-        rgba(255, 255, 255, 0.144),
-        rgba(255, 255, 255, 0.247),
-        rgba(255, 255, 255, 0.39)
-      );
-      box-shadow: 0 6px rgba(255, 255, 255, 0.623);
-      transform: translateY(-6px);
-    }
-
-    a:active {
-      transform: translateY(2px);
-     box-shadow: none;
-    }
-
+        header {
+            background-color: #2C3E50;
+            color: white;
+            padding: 20px;
+            text-align: center;
+        }
+        h1 {
+            margin: 0;
+            font-size: 36px;
+        }
+        nav {
+            text-align: center;
+            background-color: #34495E;
+            padding: 10px;
+        }
+        nav a {
+            color: white;
+            margin: 0 15px;
+            text-decoration: none;
+            font-size: 18px;
+        }
+        nav a:hover {
+            text-decoration: underline;
+        }
+        .content {
+            padding: 20px;
+        }
+        .video-container {
+            text-align: center;
+            margin: 20px 0;
+        }
+        footer {
+            background-color: #2C3E50;
+            color: white;
+            text-align: center;
+            padding: 10px;
+            position: fixed;
+            width: 100%;
+            bottom: 0;
+        }
+        .download-button {
+            background-color: #27AE60;
+            color: white;
+            padding: 15px 25px;
+            font-size: 18px;
+            text-decoration: none;
+            border-radius: 5px;
+            margin-top: 20px;
+            display: inline-block;
+        }
+        .download-button:hover {
+            background-color: #2ECC71;
+        }
     </style>
 
 </head>
