--- a/index.html
+++ b/index.html
@@ -78,5 +78,8 @@
 
     <!-- Styled Link -->
     <a href="https://example.com" target="_blank">Click Me</a>
+
+    <!-- Download Button -->
+    <a href="https://your-download-link.com" class="download-button" target="_blank">Download ZagroOS</a>
 </body>
 </html>
