--- a/index.html
+++ b/index.html
@@ -55,18 +55,41 @@
             width: 100%;
             bottom: 0;
         }
-        .download-button {
-            background-color: #27AE60;
-            color: white;
-            padding: 15px 25px;
-            font-size: 18px;
-            text-decoration: none;
+
+        /* New Button Style from Uiverse.io by cybrejon */
+        a {
+            color: rgba(255, 255, 255, 0.692);
+            padding: 10px 15px;
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+            text-shadow: 0 0 20px rgba(255, 255, 255, 0.397);
+            background: rgba(255, 255, 255, 0.068);
+            overflow: hidden;
+            font-size: 0.9rem;
+            font-weight: 600;
+            gap: 8px;
             border-radius: 5px;
-            margin-top: 20px;
-            display: inline-block;
+            margin: 0 5px;
+            transition: 0.2s;
+            border: 1px solid transparent;
         }
-        .download-button:hover {
-            background-color: #2ECC71;
+
+        a:hover {
+            border-color: rgba(255, 255, 255, 0.623);
+            background: linear-gradient(
+                to bottom,
+                rgba(255, 255, 255, 0.144),
+                rgba(255, 255, 255, 0.247),
+                rgba(255, 255, 255, 0.39)
+            );
+            box-shadow: 0 6px rgba(255, 255, 255, 0.623);
+            transform: translateY(-6px);
+        }
+
+        a:active {
+            transform: translateY(2px);
+            box-shadow: none;
         }
     </style>
 
@@ -76,10 +99,7 @@
     <h1>Welcome to Zagros OS</h1>
     <hr>
 
-    <!-- Styled Link -->
-    <a href="https://example.com" target="_blank">Click Me</a>
-
-    <!-- Download Button -->
-    <a href="https://your-download-link.com" class="download-button" target="_blank">Download ZagroOS</a>
+    <!-- Styled Link with New Button Style -->
+    <a href="https://your-download-link.com" target="_blank">Download ZagroOS</a>
 </body>
 </html>
