--- a/index.html
+++ b/index.html
@@ -60,17 +60,15 @@
         a {
             color: rgba(255, 255, 255, 0.692);
             padding: 10px 15px;
-            display: flex;
-            justify-content: space-between;
+            display: inline-block; /* Changed from flex to inline-block */
+            justify-content: center; /* Center align */
             align-items: center;
             text-shadow: 0 0 20px rgba(255, 255, 255, 0.397);
             background: rgba(255, 255, 255, 0.068);
-            overflow: hidden;
             font-size: 0.9rem;
             font-weight: 600;
-            gap: 8px;
             border-radius: 5px;
-            margin: 0 5px;
+            margin: 20px 0;
             transition: 0.2s;
             border: 1px solid transparent;
         }
@@ -101,5 +99,6 @@
 
     <!-- Styled Link with New Button Style -->
     <a href="https://your-download-link.com" target="_blank">Download ZagroOS</a>
+
 </body>
 </html>
