--- a/index.html
+++ b/index.html
@@ -95,12 +95,12 @@
 
 </head>
 
-<body>
+    <body>
     <h1>Welcome to Zagros OS</h1>
     <hr>
-<img src="img/img.png" alt="">
+    <img src="img/img.png" alt="zagros os" height="150">
     <!-- Styled Link with New Button Style -->
     <a href="https://your-download-link.com" target="_blank">downlaod zagros OS</a>
 
-</body>
+    </body>
 </html>
