--- a/index.html
+++ b/index.html
@@ -91,6 +91,13 @@
             transform: translateY(2px);
             box-shadow: none;
         }
+
+        .image-container {
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            height: 300px; /* Optional */
+        }
     </style>
 
 </head>
@@ -98,7 +105,7 @@
     <body>
     <h1>Welcome to Zagros OS</h1>
     <hr>
-    <img src="img/img.png" alt="zagros os" height="150">
+    <img src="img/img.png" alt="zagros os" class="image-container" >
     <!-- Styled Link with New Button Style -->
     <a href="https://your-download-link.com" target="_blank">downlaod zagros OS</a>
 
