--- a/index.html
+++ b/index.html
@@ -86,12 +86,17 @@
             box-shadow: none;
         }
         
+        .long-content {
+            height: 3000px;
+            background: linear-gradient(to bottom, #f4f4f4, #e0e0e0);
+        }
+        
         footer {
             background-color: #2C3E50;
             color: white;
             text-align: center;
             padding: 10px;
-            position: fixed;
+            position: relative;
             width: 100%;
             bottom: 0;
         }
@@ -106,6 +111,7 @@
         <img src="img/img.png" alt="Zagros OS">
     </div>
     <a href="https://your-download-link.com" target="_blank">Download Zagros OS</a>
+    <div class="long-content"></div>
     <footer>
         &copy; 2025 Zagros OS. All rights reserved.
     </footer>
