--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
     <style>
         body {
             font-family: Arial, sans-serif;
-            background-color: #f4f4f4;
-            color: #333;
+            background-color: #000;
+            color: #fff;
             margin: 0;
             padding: 0;
             line-height: 1.6;
@@ -56,8 +56,8 @@
         a {
             color: rgba(255, 255, 255, 0.692);
             padding: 10px 15px;
-            display: inline-block; /* Changed from flex to inline-block */
-            justify-content: center; /* Center align */
+            display: inline-block;
+            justify-content: center;
             align-items: center;
             text-shadow: 0 0 20px rgba(255, 255, 255, 0.397);
             background: rgba(255, 255, 255, 0.068);
@@ -88,7 +88,7 @@
         
         .long-content {
             height: 3000px;
-            background: linear-gradient(to bottom, #f4f4f4, #e0e0e0);
+            background: #000;
         }
         
         footer {
