--- a/index.html
+++ b/index.html
@@ -113,17 +113,11 @@
     <h4>2. very low use cpu and disk</h4>
     <h4>3. 99% use Assembly for makeing and c and c++ and rust and java 1%</h4>
     <hr>
-    <h3>for more cick it down</h3>
+    <h3>and more cick it down</h3>
     <a href="https://zagrosos.github.io/pages/about.html" target="_blank">about the os</a>
     <div class="long-content"></div>
     <footer>
     
-    <div class="image-container">
-        <img src="img/img.png" alt="Zagros OS">
-    </div>
-    <a href="https://zagrosos.github.io/pages/download.html" target="_blank">Download Zagros OS</a>
-    <div class="long-content"></div>
-    <footer>
         &copy; 2025 Zagros OS. All rights reserved.
     </footer>
 </body>
