--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
     <h4>3. 99% use Assembly for makeing and c and c++ and rust and java 1%</h4>
     <hr>
     <h3>and more cick it down</h3>
-    <a href="https://zagrosos.github.io/pages/about.html" target="_blank">about the os</a>
+    <a href="https://zagrosos.github.io/main/pages/about.html" target="_blank">about the os</a>
     <div class="long-content"></div>
     <footer>
     
