--- a/index.html
+++ b/index.html
@@ -99,6 +99,11 @@
     <hr>
     <h3>and more cick it down</h3>
     <a href="https://zagrosos.github.io/main/page/about.html" target="_blank">about the os</a>
+    <h3>the button link to <zagrosos class="github io">
+    <main>
+    <page>
+    <about class="html"></about></h3>
+    <a href="https://zagrosos.github.io/main/page/download.html" target="_blank">download the os</a>
     <div class="long-content"></div>
     <footer>
     
