--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="google-site-verification" content="hiF8NsrNYWBHD3XUb0Zhw8kp7l7yQ3_GI9sCBALCqSc" />
     <title>Zagros OS Assembly</title>
     
     <style>
